--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "firebase-admin": "^12.1.1",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.3",
